# dsptools

./: .gitignore  .pylintrc  Readme.md  altreryx_config.yml  pytest_requirements.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: black.yml  codeql.yml  codespell.yml  diff.yml  pylint.yml  pytest.yml
.tox/py310/: .tox-info.json
docs/dsptools/: index.md
docs/dsptools/alteryx/: alteryx_config.md  engine.md  index.md
docs/dsptools/data_transfer/: azurestorageblob.md  index.md  sftp.md
docs/dsptools/errors/: alteryx.md  data.md  execution.md  index.md
docs/dsptools/utils/: execution.md  index.md  keyvault.md  notifications.md
dsptools/alteryx/: alteryx_config.py  engine.py  pid_utils.py
dsptools/data_transfer/: azurestorageblob.py  sftp.py
dsptools/errors/: alteryx.py  data.py  execution.py
dsptools/utils/: email.py  execution.py  keyvault.py  notifications.py
dsptools/validators/: basemodel.py
tests/: test_conditional_polling.py  test_handle_failure.py  test_parallelized_execution.py  test_retry.py  test_timeout.py
