[metadata]
name = dsptools
version = 0.9.1
description = A set of commonly used ETL functions
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10  # Adjust this to the actual Python version you require

[options]
install_requires =
    azure-storage-blob==12.8.1
    paramiko==3.3.1
    setuptools==68.2.2
    pymsteams==0.2.2
    SQLAlchemy==2.0.22
    PyYAML==6.0.1

python_requires = >=3.10

[options.extras_require]
testing =
    pytest>=7.4.2
    pytest-cov>=4.10
    tox>=4.6