[metadata]
name = dsptools
version = 0.10.7
description = A set of commonly used ETL functions
classifiers =
    Development Status :: 3 - Beta
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
install_requires =
    azure-storage-blob>=12.8
    paramiko>=3.3
    setuptools>=68.2
    pymsteams>=0.2
    SQLAlchemy>=2.0
    PyYAML>=6.0
    pydantic < 2

python_requires = >=3.8

[options.extras_require]
testing =
    pytest>=7.4.2
    pytest-cov>=4.10
    tox>=4.6
