[metadata]
name = dsptools
version = 0.12.0
description = A set of commonly used ETL functions
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
install_requires =
    azure-storage-blob==12.8.1
    paramiko==3.3.1
    pymsteams==0.2.2
    PyYAML==6.0.1
    setuptools==68.2.2
    SQLAlchemy==2.0.25
    pyodbc >= 5.0.0

python_requires = >=3.8

[options.extras_require]
testing =
    pytest>=7.4.2
    pytest-cov>=4.10
    tox>=4.6
